--- a/7章演習問題.css
+++ b/7章演習問題.css
@@ -17,3 +17,32 @@
   padding-left: 20px;
   color: gray;
 }
+
+main {
+  width: 800px;
+  margin: 50px auto;
+}
+
+.webcamp {
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #d1d1d1;
+}
+
+.webcamp-pro {
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #d1d1d1;
+}
+
+.webcamp-woman {
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #d1d1d1;
+}
+
+.webcamp-career {
+  margin-bottom: 50px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #d1d1d1;
+}
